@@ -1,147 +1,140 @@
 package com.hotvect.api.data.raw;
 
-import com.google.common.collect.ImmutableList;
 import com.hotvect.api.data.HashedValue;
 import com.hotvect.api.data.RawValue;
 import com.hotvect.api.data.RawValueType;
 import com.hotvect.api.data.SparseVector;
-import net.jqwik.api.ForAll;
-import net.jqwik.api.Property;
+import net.jqwik.api.*;
+import net.jqwik.api.Tuple.Tuple2;
 import net.jqwik.api.constraints.Size;
-import org.junit.jupiter.api.Test;
+import net.jqwik.api.constraints.StringLength;
 import org.junit.jupiter.api.function.Executable;
-import org.quicktheories.api.Pair;
-import org.quicktheories.core.Gen;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.function.BiConsumer;
 import java.util.stream.IntStream;
 
-import static com.hotvect.testutils.TestUtils.*;
 import static org.junit.jupiter.api.Assertions.*;
-import static org.quicktheories.QuickTheory.qt;
-import static org.quicktheories.generators.Generate.constant;
-import static org.quicktheories.generators.Generate.intArrays;
-import static org.quicktheories.generators.SourceDSL.*;
 
 class RawValueTest {
 
     @Property
-    void denseVector(@ForAll @Size(max = 5) double[] values){
+    void denseVector(@ForAll @Size(max = 5) double[] values) {
         double[] copied = Arrays.copyOf(values, values.length);
-        var rawValue = RawValue.denseVector(values);
+        RawValue rawValue = RawValue.denseVector(values);
         assertArrayEquals(copied, rawValue.getNumericals());
-
-        List<Executable> notAllowed = ImmutableList.of(
+        List<Executable> notAllowed = List.of(
                 rawValue::getStrings,
                 rawValue::getCategoricals,
                 rawValue::getSingleCategorical,
                 rawValue::getSingleNumerical,
                 rawValue::getSparseVector
         );
-        notAllowed.forEach(
-                x -> assertThrows(IllegalStateException.class,x)
-        );
-
-        var indices = IntStream.range(0, copied.length).toArray();
-
+        notAllowed.forEach(x -> assertThrows(IllegalStateException.class, x));
+        int[] indices = IntStream.range(0, copied.length).toArray();
         assertEquals(HashedValue.denseVector(values), rawValue.getHashedValue());
         assertEquals(RawValueType.DENSE_VECTOR, rawValue.getValueType());
-
-    }
-    @Test
-    void singleCategorical() {
-        qt().forAll(integers().all()).checkAssert(x -> {
-            RawValue subject = RawValue.singleCategorical(x);
-            assertEquals(x, subject.getSingleCategorical());
-            assertThrows(IllegalStateException.class, subject::getSingleNumerical);
-            assertThrows(IllegalStateException.class, subject::getNumericals);
-            assertThrows(IllegalStateException.class, subject::getSparseVector);
-        });
     }
 
-    @Test
-    void singleString() {
-        qt().forAll(strings().allPossible().ofLengthBetween(0, 3)).checkAssert(x -> {
-            RawValue subject = RawValue.singleString(x);
-            assertEquals(x, subject.getSingleString());
-            assertThrows(IllegalStateException.class, subject::getSingleNumerical);
-            assertThrows(IllegalStateException.class, subject::getNumericals);
-        });
+    @Property
+    void singleCategorical(@ForAll int x) {
+        RawValue subject = RawValue.singleCategorical(x);
+        assertEquals(x, subject.getSingleCategorical());
+        assertThrows(IllegalStateException.class, subject::getSingleNumerical);
+        assertThrows(IllegalStateException.class, subject::getNumericals);
+        assertThrows(IllegalStateException.class, subject::getSparseVector);
     }
 
-    @Test
-    void singleNumerical() {
-        qt().forAll(doubles().any()).checkAssert(x -> {
-            RawValue subject = RawValue.singleNumerical(x);
-            assertEquals(x, subject.getSingleNumerical());
+    @Property
+    void singleString(@ForAll @StringLength(min = 0, max = 3) String x) {
+        RawValue subject = RawValue.singleString(x);
+        assertEquals(x, subject.getSingleString());
+        assertThrows(IllegalStateException.class, subject::getSingleNumerical);
+        assertThrows(IllegalStateException.class, subject::getNumericals);
+    }
+
+    @Property
+    void singleNumerical(@ForAll double x) {
+        RawValue subject = RawValue.singleNumerical(x);
+        assertEquals(x, subject.getSingleNumerical());
+        assertThrows(IllegalStateException.class, subject::getSingleCategorical);
+        assertThrows(IllegalStateException.class, subject::getCategoricals);
+        assertThrows(IllegalStateException.class, subject::getSparseVector);
+    }
+
+    @Property
+    void categoricals(@ForAll @Size(min = 0, max = 3) int[] x) {
+        RawValue subject = RawValue.categoricals(x);
+        assertArrayEquals(x, subject.getCategoricals());
+        assertThrows(IllegalStateException.class, subject::getSingleNumerical);
+        assertThrows(IllegalStateException.class, subject::getSparseVector);
+        if (x.length != 1) {
             assertThrows(IllegalStateException.class, subject::getSingleCategorical);
-            assertThrows(IllegalStateException.class, subject::getCategoricals);
-            assertThrows(IllegalStateException.class, subject::getSparseVector);
-        });
+        }
     }
 
-    @Test
-    void categoricals() {
-        qt().forAll(intArrays(integers().between(0, 3), integers().all())).checkAssert( x -> {
-            RawValue subject = RawValue.categoricals(x);
-            assertArrayEquals(x, subject.getCategoricals());
+    @Property
+    void numericals(@ForAll("intDoubleArrayPairs") Tuple2<int[], double[]> x) {
+        int[] names = x.get1();
+        double[] values = x.get2();
+        assertEquals(names.length, values.length);
+        RawValue subject = RawValue.namedNumericals(names, values);
+        assertArrayEquals(names, subject.getNumericalIndices());
+        assertThrows(IllegalStateException.class, subject::getSingleCategorical);
+        if (names.length != 1) {
             assertThrows(IllegalStateException.class, subject::getSingleNumerical);
-            assertThrows(IllegalStateException.class, subject::getSparseVector);
-            if (x.length != 1) {
-                assertThrows(IllegalStateException.class, subject::getSingleCategorical);
-            }
+        }
+        assertArrayEquals(values, subject.getNumericals());
+        SparseVector actualVector = subject.getSparseVector();
+        assertEquals(new SparseVector(names, values), actualVector);
+    }
+
+    @Provide
+    Arbitrary<Tuple2<int[], double[]>> intDoubleArrayPairs() {
+        Arbitrary<int[]> intArrays = Arbitraries.integers()
+                .array(int[].class)
+                .ofMinSize(0)
+                .ofMaxSize(3);
+        return intArrays.flatMap(ints -> {
+            int length = ints.length;
+            Arbitrary<double[]> doubleArrays = Arbitraries.doubles()
+                    .array(double[].class)
+                    .ofSize(length);
+            return doubleArrays.map(doubles -> Tuple.of(ints, doubles));
         });
     }
 
-    @Test
-    void numericals() {
-        Gen<Pair<int[], double[]>> data = intArrays(integers().between(0, 3), integers().all())
-                .mutate((is, rand) -> Pair.of(is, doubleArrays(constant(is.length), doubles().any()).generate(rand)));
-        qt().forAll(data).checkAssert(x -> {
+    @Property
+    void stringsToNumericals(@ForAll("stringDoubleArrayPairs") Tuple2<String[], double[]> x) {
+        String[] names = x.get1();
+        double[] values = x.get2();
+        assertEquals(names.length, values.length);
+        RawValue subject = RawValue.stringsToNumericals(names, values);
+        assertArrayEquals(names, subject.getStrings());
+        assertThrows(IllegalStateException.class, subject::getSingleCategorical);
+        assertThrows(IllegalStateException.class, subject::getSingleNumerical);
+        assertArrayEquals(values, subject.getNumericals());
+        assertThrows(IllegalStateException.class, subject::getSparseVector);
+    }
 
-            int[] names = x._1;
-            double[] values = x._2;
-            assert names.length == values.length;
-
-            RawValue subject = RawValue.namedNumericals(names, values);
-            assertArrayEquals(names, subject.getNumericalIndices());
-            assertThrows(IllegalStateException.class, subject::getSingleCategorical);
-            if (names.length != 1) {
-                assertThrows(IllegalStateException.class, subject::getSingleNumerical);
-            }
-
-            assertArrayEquals(values, subject.getNumericals());
-
-            SparseVector actualVector = subject.getSparseVector();
-            assertEquals(new SparseVector(names, values), actualVector);
-
+    @Provide
+    Arbitrary<Tuple2<String[], double[]>> stringDoubleArrayPairs() {
+        Arbitrary<String[]> stringArrays = Arbitraries.strings()
+                .withCharRange('a', 'z')
+                .ofMinLength(0).ofMaxLength(3)
+                .array(String[].class)
+                .ofMinSize(0)
+                .ofMaxSize(3);
+        return stringArrays.flatMap(strings -> {
+            int length = strings.length;
+            Arbitrary<double[]> doubleArrays = Arbitraries.doubles()
+                    .array(double[].class)
+                    .ofSize(length);
+            return doubleArrays.map(doubles -> Tuple.of(strings, doubles));
         });
     }
 
-    @Test
-    void stringsToNumericals() {
-        Gen<Pair<String[], double[]>> data = stringArrays(integers().between(0, 3), strings().allPossible().ofLengthBetween(0, 3))
-                .mutate((is, rand) -> Pair.of(is, doubleArrays(constant(is.length), doubles().any()).generate(rand)));
-        qt().forAll(data).checkAssert(x -> {
-
-            String[] names = x._1;
-            double[] values = x._2;
-            assert names.length == values.length;
-
-            RawValue subject = RawValue.stringsToNumericals(names, values);
-            assertArrayEquals(names, subject.getStrings());
-            assertThrows(IllegalStateException.class, subject::getSingleCategorical);
-            assertThrows(IllegalStateException.class, subject::getSingleNumerical);
-
-            assertArrayEquals(values, subject.getNumericals());
-
-            assertThrows(IllegalStateException.class, subject::getSparseVector);
-        });
-    }
-
-    @Test
+    @Example
     void invalidInputs() {
         assertThrows(NullPointerException.class, () -> RawValue.categoricals(null));
         assertThrows(NullPointerException.class, () -> RawValue.namedNumericals(null, null));
@@ -150,10 +143,9 @@ class RawValueTest {
         assertThrows(NullPointerException.class, () -> RawValue.strings(null));
         assertThrows(NullPointerException.class, () -> RawValue.stringsToNumericals(null, null));
         assertThrows(IllegalArgumentException.class, () -> RawValue.stringsToNumericals(new String[0], new double[1]));
-
     }
 
-    @Test
+    @Example
     void getValueType() {
         assertEquals(RawValueType.SINGLE_CATEGORICAL, RawValue.singleCategorical(1).getValueType());
         assertEquals(RawValueType.CATEGORICALS, RawValue.categoricals(new int[0]).getValueType());
@@ -163,134 +155,181 @@ class RawValueTest {
         assertEquals(RawValueType.STRINGS_TO_NUMERICALS, RawValue.stringsToNumericals(new String[0], new double[0]).getValueType());
     }
 
-    @Test
-    void equality(){
-        // Single categorical
-        BiConsumer<Integer, Integer> assertSingleCategorical = (x, y) -> {
-            RawValue xp = RawValue.singleCategorical(x);
-            RawValue yp = RawValue.singleCategorical(y);
-            assertEquals(x.equals(y), xp.equals(yp));
-            if (x.equals(y)){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
+    @Property
+    void equalitySingleCategorical(@ForAll int x, @ForAll int y) {
+        Assume.that(x != y);
+        RawValue xp = RawValue.singleCategorical(x);
+        RawValue yp = RawValue.singleCategorical(y);
+        assertEquals(x == y, xp.equals(yp));
+        if (x == y) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        qt().withFixedSeed(10).forAll(integers().all(), integers().all())
-                .assuming((x, y) -> !x.equals(y))
-                .checkAssert(assertSingleCategorical);
+    @Property
+    void equalitySingleCategoricalEquals(@ForAll("equalIntPairs") Tuple2<Integer, Integer> pair) {
+        int x = pair.get1();
+        int y = pair.get2();
+        RawValue xp = RawValue.singleCategorical(x);
+        RawValue yp = RawValue.singleCategorical(y);
+        assertEquals(x == y, xp.equals(yp));
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-        Gen<Pair<Integer, Integer>> equalInts = generateEquals(integers().all());
-        qt().forAll(equalInts)
-                .checkAssert(x -> assertSingleCategorical.accept(x._1, x._2));
+    @Provide
+    Arbitrary<Tuple2<Integer, Integer>> equalIntPairs() {
+        return Arbitraries.integers().map(i -> Tuple.of(i, i));
+    }
 
-        // Single numerical
-        BiConsumer<Double, Double> assertSingleNumerical = (x, y) -> {
-            RawValue xp = RawValue.singleNumerical(x);
-            RawValue yp = RawValue.singleNumerical(y);
-            assertEquals(x.equals(y), xp.equals(yp));
-            if (x.equals(y)){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
+    @Property
+    void equalitySingleNumerical(@ForAll double x, @ForAll double y) {
+        Assume.that(Double.compare(x, y) != 0);
+        RawValue xp = RawValue.singleNumerical(x);
+        RawValue yp = RawValue.singleNumerical(y);
+        assertEquals(Double.compare(x, y) == 0, xp.equals(yp));
+        if (Double.compare(x, y) == 0) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        qt().withFixedSeed(10).forAll(discreteDoubles(), discreteDoubles())
-                .assuming((x, y) -> !x.equals(y))
-                .checkAssert(assertSingleNumerical);
+    @Property
+    void equalitySingleNumericalEquals(@ForAll("equalDoublePairs") Tuple2<Double, Double> pair) {
+        double x = pair.get1();
+        double y = pair.get2();
+        RawValue xp = RawValue.singleNumerical(x);
+        RawValue yp = RawValue.singleNumerical(y);
+        assertEquals(Double.compare(x, y) == 0, xp.equals(yp));
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-        Gen<Pair<Double, Double>> equalDoubles = generateEquals(discreteDoubles());
-        qt().forAll(equalDoubles)
-                .checkAssert(x -> assertSingleNumerical.accept(x._1, x._2));
+    @Provide
+    Arbitrary<Tuple2<Double, Double>> equalDoublePairs() {
+        return Arbitraries.doubles().map(d -> Tuple.of(d, d));
+    }
 
+    @Property
+    void equalityCategoricals(@ForAll @Size(min = 0, max = 5) int[] x,
+                              @ForAll @Size(min = 0, max = 5) int[] y) {
+        Assume.that(!Arrays.equals(x, y));
+        RawValue xp = RawValue.categoricals(x);
+        RawValue yp = RawValue.categoricals(y);
+        assertEquals(Arrays.equals(x, y), xp.equals(yp));
+        if (Arrays.equals(x, y)) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        // Categoricals
-        BiConsumer<int[], int[]> assertCategoricals = (x, y) -> {
-            RawValue xp = RawValue.categoricals(x);
-            RawValue yp = RawValue.categoricals(y);
-            assertEquals(Arrays.equals(x, y), xp.equals(yp));
-            if (Arrays.equals(x, y)){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
+    @Property
+    void equalityCategoricalsEquals(@ForAll("equalIntArrayPairs") Tuple2<int[], int[]> pair) {
+        int[] x = pair.get1();
+        int[] y = pair.get2();
+        RawValue xp = RawValue.categoricals(x);
+        RawValue yp = RawValue.categoricals(y);
+        assertTrue(Arrays.equals(x, y));
+        assertEquals(xp, yp);
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-        qt().withFixedSeed(10).forAll(categoricalVectors(), categoricalVectors())
-                .assuming((x, y) -> !Arrays.equals(x, y))
-                .checkAssert(assertCategoricals);
+    @Provide
+    Arbitrary<Tuple2<int[], int[]>> equalIntArrayPairs() {
+        return Arbitraries.integers()
+                .array(int[].class)
+                .ofMinSize(0).ofMaxSize(5)
+                .map(arr -> Tuple.of(arr, arr));
+    }
 
-        Gen<Pair<int[], int[]>> generateEquals = generateEquals(categoricalVectors());
-        qt().forAll(generateEquals)
-                .checkAssert(x -> assertCategoricals.accept(x._1, x._2));
+    @Property
+    void equalityStrings(@ForAll("stringArrays") String[] x,
+                         @ForAll("stringArrays") String[] y) {
+        Assume.that(!Arrays.equals(x, y));
+        RawValue xp = RawValue.strings(x);
+        RawValue yp = RawValue.strings(y);
+        assertEquals(Arrays.equals(x, y), xp.equals(yp));
+        if (Arrays.equals(x, y)) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        // Numericals
-        Gen<Pair<int[], double[]>> data = testVectors();
-        BiConsumer<Pair<int[], double[]>, Pair<int[], double[]>> assertNumericals = (x, y) -> {
-            RawValue xp = RawValue.namedNumericals(x._1, x._2);
-            RawValue yp = RawValue.namedNumericals(y._1, y._2);
+    @Property
+    void equalityStringsEquals(@ForAll("equalStringArrayPairs") Tuple2<String[], String[]> pair) {
+        String[] x = pair.get1();
+        String[] y = pair.get2();
+        RawValue xp = RawValue.strings(x);
+        RawValue yp = RawValue.strings(y);
+        assertTrue(Arrays.equals(x, y));
+        assertEquals(xp, yp);
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-            boolean equal = Arrays.equals(x._1, y._1) && Arrays.equals(x._2, y._2);
-            assertEquals(equal, xp.equals(yp));
-            if (equal){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
+    @Provide
+    Arbitrary<String[]> stringArrays() {
+        return Arbitraries.strings()
+                .withCharRange('a', 'z')
+                .ofMinLength(0).ofMaxLength(5)
+                .array(String[].class)
+                .ofMinSize(0)
+                .ofMaxSize(5);
+    }
 
-        qt().withFixedSeed(10).forAll(data, data)
-                .assuming((x, y) -> !Arrays.equals(x._1, y._1) || !Arrays.equals(x._2, y._2))
-                .checkAssert(assertNumericals);
+    @Provide
+    Arbitrary<Tuple2<String[], String[]>> equalStringArrayPairs() {
+        return stringArrays().map(arr -> Tuple.of(arr, arr));
+    }
 
-        qt().forAll(generateEquals(data)).checkAssert(x -> assertNumericals.accept(x._1, x._2));
+    @Property
+    void equalitySingleString(@ForAll @StringLength(min = 0, max = 5) String x,
+                              @ForAll @StringLength(min = 0, max = 5) String y) {
+        Assume.that(!x.equals(y));
+        RawValue xp = RawValue.singleString(x);
+        RawValue yp = RawValue.singleString(y);
+        assertEquals(x.equals(y), xp.equals(yp));
+        if (x.equals(y)) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        // Strings
-        BiConsumer<String[], String[]> assertStrings = (x, y) -> {
-            RawValue xp = RawValue.strings(x);
-            RawValue yp = RawValue.strings(y);
+    @Property
+    void equalitySingleStringEquals(@ForAll("equalStrings") Tuple2<String, String> pair) {
+        String x = pair.get1();
+        String y = pair.get2();
+        RawValue xp = RawValue.singleString(x);
+        RawValue yp = RawValue.singleString(y);
+        assertEquals(x, y);
+        assertEquals(xp, yp);
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-            boolean equal = Arrays.equals(x, y);
-            assertEquals(equal, xp.equals(yp));
-            if (equal){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
+    @Provide
+    Arbitrary<Tuple2<String, String>> equalStrings() {
+        return Arbitraries.strings()
+                .withCharRange('a', 'z')
+                .ofMinLength(0).ofMaxLength(5)
+                .map(str -> Tuple.of(str, str));
+    }
 
-        qt().withFixedSeed(10).forAll(stringArraysWithDefaultContent(), stringArraysWithDefaultContent())
-                .assuming((x, y) -> !Arrays.equals(x, y))
-                .checkAssert(assertStrings);
+    @Property
+    void equalityStringsToNumericals(@ForAll("stringDoubleArrayPairs") Tuple2<String[], double[]> x,
+                                     @ForAll("stringDoubleArrayPairs") Tuple2<String[], double[]> y) {
+        Assume.that(!Arrays.equals(x.get1(), y.get1()) || !Arrays.equals(x.get2(), y.get2()));
+        RawValue xp = RawValue.stringsToNumericals(x.get1(), x.get2());
+        RawValue yp = RawValue.stringsToNumericals(y.get1(), y.get2());
+        boolean equal = Arrays.equals(x.get1(), y.get1()) && Arrays.equals(x.get2(), y.get2());
+        assertEquals(equal, xp.equals(yp));
+        if (equal) {
+            assertEquals(xp.hashCode(), yp.hashCode());
+        }
+    }
 
-        qt().forAll(generateEquals(stringArraysWithDefaultContent())).checkAssert(x -> assertStrings.accept(x._1, x._2));
+    @Property
+    void equalityStringsToNumericalsEquals(@ForAll("equalStringDoubleArrayPairs") Tuple2<String[], double[]> x) {
+        RawValue xp = RawValue.stringsToNumericals(x.get1(), x.get2());
+        RawValue yp = RawValue.stringsToNumericals(x.get1(), x.get2());
+        assertEquals(xp, yp);
+        assertEquals(xp.hashCode(), yp.hashCode());
+    }
 
-        // Single String
-        BiConsumer<String, String> assertSingleString = (x, y) -> {
-            RawValue xp = RawValue.singleString(x);
-            RawValue yp = RawValue.singleString(y);
-
-            boolean equal = x.equals(y);
-            assertEquals(equal, xp.equals(yp));
-            if (equal){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
-
-        qt().withFixedSeed(10).forAll(defaultStrings(), defaultStrings())
-                .assuming((x, y) -> !x.equals(y))
-                .checkAssert(assertSingleString);
-
-        qt().forAll(generateEquals(defaultStrings())).checkAssert(x -> assertSingleString.accept(x._1, x._2));
-
-        // String To Numericals
-        BiConsumer<Pair<String[], double[]>, Pair<String[], double[]>> assertStringsToNumericals = (x, y) -> {
-            RawValue xp = RawValue.stringsToNumericals(x._1, x._2);
-            RawValue yp = RawValue.stringsToNumericals(y._1, y._2);
-
-            boolean equal = Arrays.equals(x._1, y._1) && Arrays.equals(x._2, y._2);
-            assertEquals(equal, xp.equals(yp));
-            if (equal){
-                assertEquals(xp.hashCode(), yp.hashCode());
-            }
-        };
-
-        qt().withFixedSeed(10).forAll(stringToNumericals(), stringToNumericals())
-                .assuming((x, y) -> (!Arrays.equals(x._1, y._1)) || (!Arrays.equals(x._2, y._2)))
-                .checkAssert(assertStringsToNumericals);
-
-        qt().forAll(generateEquals(stringToNumericals())).checkAssert(x -> assertStringsToNumericals.accept(x._1, x._2));
+    @Provide
+    Arbitrary<Tuple2<String[], double[]>> equalStringDoubleArrayPairs() {
+        return stringDoubleArrayPairs().map(pair -> Tuple.of(pair.get1(), pair.get2()));
     }
 }
